# amplicon_sorter

./: .gitignore  amplicon_sorter.py  pyproject.toml
