[tool.poetry]
name = "amplicon-sorter"
version = "0.1.0"
description = "Sorts amplicons from Nanopore sequencing data based on similarity"
authors = ["Andy Vierstraete"]
license = "GNU"
readme = "README.md"

[tool.poetry.scripts]
"amplicon_sorter" = "amplicon_sorter:main"

[tool.poetry.dependencies]
python = "^3.9"
edlib = "^1.3.9"
biopython = "^1.81"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
