[tool.poetry]
name = "amplicon-sorter"
version = "0.1.0"
description = "Sorts amplicons from Nanopore sequencing data based on similarity"
authors = ["Andy Vierstraete"]
license = "GNU"
readme = "README.md"

[tool.poetry.scripts]
"amplicon_sorter" = "amplicon_sorter:main"

[tool.poetry.dependencies]
python = "^3.9"
edlib = "^1.3.9"
biopython = "^1.81"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
blackdoc = "^0.3.9"
pdoc = "^14.1.0"
mypy = "^1.7.1"
tox = "^4.11.4"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
